# gutenberg-browser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gutenberg_browser/: __main__.py  app.py  db.py  indexer.py  models.py
src/gutenberg_browser/styles/: app.tcss
src/gutenberg_browser/widgets/: detail_panel.py  progress_screen.py  search_panel.py
