[project]
name = "gutenberg-browser"
version = "0.1.0"
description = "Project Gutenberg metadata browser TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.89.0",
]

[project.scripts]
gutenberg-browser = "gutenberg_browser.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gutenberg_browser"]

[tool.uv]
dev-dependencies = [
    "textual-dev>=0.89.0",
]
